--- a/src/tests/PerformanceTests/PerformanceTests.csproj
+++ b/src/tests/PerformanceTests/PerformanceTests.csproj
@@ -40,8 +40,9 @@
       <HintPath>..\..\..\..\..\External\NUnit.3.5.0\lib\net45\nunit.framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="SafeOrbitNetCore">
-      <HintPath>..\..\SafeOrbitNetCore\bin\Debug\net46\SafeOrbitNetCore.dll</HintPath>
+    <Reference Include="SafeOrbit, Version=0.1.6152.4265, Culture=neutral, PublicKeyToken=bb96809731729604, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\SafeOrbit\bin\Debug\net46\SafeOrbit.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -51,7 +52,6 @@
     <Compile Include="Memory\SafeBytes\SafeBytesPerformanceTests.cs" />
     <Compile Include="Memory\SafeBytes\SafeByte\Factory\MemoryCachedSafeByteFactoryPerformanceTests.cs" />
     <Compile Include="Memory\SafeBytes\SafeByte\SafeBytePerformanceTests.cs" />
-    <Compile Include="Random\FastRandomPerformanceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -63,6 +63,9 @@
   <ItemGroup>
     <None Include="packages.config" />
     <None Include="SafeOrbit.licenseheader" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
