--- a/src/tests/Infrastructure/Infrastructure.csproj
+++ b/src/tests/Infrastructure/Infrastructure.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2F706E0C-CA13-4CB7-A472-7F3E57BBF4DB}</ProjectGuid>
+    <ProjectGuid>{1E69549B-D6A5-42BA-8BD7-B3370731C59A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>UnitTests.NetFramework</RootNamespace>
-    <AssemblyName>UnitTests.NetFramework</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <RootNamespace>SafeOrbit.Tests</RootNamespace>
+    <AssemblyName>SafeOrbit.Tests</AssemblyName>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,38 +29,37 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>..\..\..\docs\signature_keys\private\TestApi-key.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="nunit.framework, Version=3.5.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\NUnit.3.5.0\lib\net45\nunit.framework.dll</HintPath>
+      <HintPath>..\..\..\..\..\External\NUnit.3.5.0\lib\net45\nunit.framework.dll</HintPath>
       <Private>True</Private>
-    </Reference>
-    <Reference Include="SafeOrbit">
-      <HintPath>..\..\SafeOrbit\bin\Debug\net46\SafeOrbit.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Exceptions\Base\SerializableExceptionTestsBase.cs" />
-    <Compile Include="Exceptions\DataLengthExceptionTests.cs" />
-    <Compile Include="Exceptions\MemoryInjectionExceptionTests.cs" />
-    <Compile Include="Exceptions\UnexpectedEnumValueExceptionTests.cs" />
+    <Compile Include="Cases\ByteCases.cs" />
+    <Compile Include="Cases\CommonCases.cs" />
+    <Compile Include="Equality\EqualityTestsBase.cs" />
+    <Compile Include="Equality\IEqualityTests.cs" />
+    <Compile Include="Utilities\Hex.cs" />
+    <Compile Include="Stub\IStubFactory.cs" />
+    <Compile Include="Stub\IStubProvider.cs" />
+    <Compile Include="Stub\StubProviderBase.cs" />
+    <Compile Include="TestsBase.cs" />
+    <Compile Include="TestsFor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Stub\StubFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj">
-      <Project>{1e69549b-d6a5-42ba-8bd7-b3370731c59a}</Project>
-      <Name>Infrastructure</Name>
-    </ProjectReference>
+    <None Include="SafeOrbit.licenseheader" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
