--- a/src/tests/UnitTests.NetFramework/UnitTests.NetFramework.csproj
+++ b/src/tests/UnitTests.NetFramework/UnitTests.NetFramework.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Exceptions\DataLengthExceptionTests.cs" />
     <Compile Include="Exceptions\MemoryInjectionExceptionTests.cs" />
     <Compile Include="Exceptions\UnexpectedEnumValueExceptionTests.cs" />
+    <Compile Include="Memory\SafeContainer\Instance\Validation\InstanceValidationExceptionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -62,6 +63,9 @@
       <Project>{1e69549b-d6a5-42ba-8bd7-b3370731c59a}</Project>
       <Name>Infrastructure</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
