renaming NET46 to NETFRAMEWORK and adding tests with cross-platform code to UnitTests.NetFramework

--- a/src/SafeOrbit/project.json
+++ b/src/SafeOrbit/project.json
@@ -44,7 +44,7 @@
     },
     "net46": {
       "buildOptions": {
-        "define": [ "NET46" ]
+        "define": [ "NETFRAMEWORK" ]
       },
       "frameworkAssemblies": {
         "System.Xml": "4.0.0",
