--- a/src/tests/UnitTests.NetFramework/UnitTests.NetFramework.csproj
+++ b/src/tests/UnitTests.NetFramework/UnitTests.NetFramework.csproj
@@ -31,6 +31,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Castle.Core.3.3.3\lib\net45\Castle.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Moq, Version=4.5.28.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Moq.4.5.28\lib\net45\Moq.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="nunit.framework, Version=3.5.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\..\packages\NUnit.3.5.0\lib\net45\nunit.framework.dll</HintPath>
       <Private>True</Private>
@@ -52,6 +60,10 @@
     <Compile Include="Exceptions\DataLengthExceptionTests.cs" />
     <Compile Include="Exceptions\MemoryInjectionExceptionTests.cs" />
     <Compile Include="Exceptions\UnexpectedEnumValueExceptionTests.cs" />
+    <Compile Include="Infrastructure\Reflection\MethodInfoHelperTests.cs" />
+    <Compile Include="Internal\Fakes\SafeStringFaker.cs" />
+    <Compile Include="Internal\Helpers\SafeStringHelper.cs" />
+    <Compile Include="Internal\Stubs.cs" />
     <Compile Include="Memory\SafeContainer\Instance\Validation\InstanceValidationExceptionTests.cs" />
     <Compile Include="Memory\SafeMemoryStreamTests.cs" />
     <Compile Include="Memory\SafeString\SafeStringToStringMarshalerTests.cs" />
@@ -65,13 +77,15 @@
       <Project>{1e69549b-d6a5-42ba-8bd7-b3370731c59a}</Project>
       <Name>Infrastructure</Name>
     </ProjectReference>
+    <ProjectReference Include="..\UnitTests\UnitTests.csproj">
+      <Project>{66F3EA86-ED04-4007-931D-CBEDF060AE49}</Project>
+      <Name>UnitTests</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Infrastructure\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
