--- a/src/SafeOrbit/SafeOrbit.nuspec
+++ b/src/SafeOrbit/SafeOrbit.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>$id$</id>
-    <version>0.2</version>
+    <version>0.2.1</version>
     <title>$title$</title>
     <authors>$author$</authors>
     <owners>$author$</owners>
@@ -17,10 +17,9 @@
 	Wiki : https://github.com/undergroundwires/safeOrbit/wiki
 	</description>
     <releaseNotes>
-	------0.2------
-	-.NET Core is supported.
-	- [Security] FastRandom generates secure numbers.
-    - More tests, more/better documentations and refactorings.
+	- [.NET CORE] Bug fix :  Not being able to read IL-bytes
+	- Minor bug fixes
+	- Xml documentation are included
 	</releaseNotes>
     <copyright>Copyright 2016</copyright>
     <tags>.net security protect safeorbit hash safestring saferandom safebytes protection injection detection asynchronous encryption</tags>
