--- a/src/tests/UnitTests/packages.config
+++ b/src/tests/UnitTests/packages.config
@@ -3,4 +3,5 @@
   <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
   <package id="Moq" version="4.5.23" targetFramework="net452" />
   <package id="NUnit" version="3.5.0" targetFramework="net452" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net46" />
 </packages>
