--- a/src/tests/apps/RandomComparisonApp/packages.config
+++ b/src/tests/apps/RandomComparisonApp/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.1" targetFramework="net46" />
+  <package id="SafeOrbit" version="0.2.1" targetFramework="net46" />
   <package id="SharpCompress" version="0.14.0" targetFramework="net46" />
 </packages>
