--- a/src/tests/apps/RandomComparisonApp/RandomComparisonApp.csproj
+++ b/src/tests/apps/RandomComparisonApp/RandomComparisonApp.csproj
@@ -39,8 +39,8 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="SafeOrbit, Version=0.2.1.0, Culture=neutral, PublicKeyToken=bb96809731729604, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\SafeOrbit.0.2.1\lib\net46\SafeOrbit.dll</HintPath>
-      <Private>True</Private>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\SafeOrbit\bin\Release\net46\SafeOrbit.dll</HintPath>
     </Reference>
     <Reference Include="SharpCompress, Version=0.14.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\SharpCompress.0.14.0\lib\net45\SharpCompress.dll</HintPath>
