--- a/src/tests/PerformanceTests/PerformanceTests.csproj
+++ b/src/tests/PerformanceTests/PerformanceTests.csproj
@@ -45,7 +45,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-	<Reference Include="Infrastructure">
+    <Reference Include="Infrastructure">
       <HintPath>..\Infrastructure\bin\$(Configuration)\net46\Infrastructure.dll</HintPath>
     </Reference>
   </ItemGroup>
@@ -57,8 +57,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\SafeOrbit.licenseheader">
+      <Link>SafeOrbit.licenseheader</Link>
+    </None>
     <None Include="packages.config" />
-    <None Include="SafeOrbit.licenseheader" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
