--- a/src/SafeOrbit/project.json
+++ b/src/SafeOrbit/project.json
@@ -1,7 +1,7 @@
 {
   "copyright": "MIT-licensed",
   "language": "en",
-  "description": "SafeOrbit is easy-to-use and strong security toolkit for .NET",
+  "description": "SafeOrbit is easy-to-use and strong security toolkit for .NET and .NET Core.",
   "title": "SafeOrbit",
   "authors":  ["Erkin Ekici"], 
   "configurations": {
