--- a/src/SafeOrbit/SafeOrbit.nuspec
+++ b/src/SafeOrbit/SafeOrbit.nuspec
@@ -3,7 +3,7 @@
 <package>
   <metadata>
     <id>$id$</id>
-    <version>0.2.1</version>
+    <version>0.2.2</version>
     <title>$title$</title>
     <authors>$author$</authors>
     <owners>$author$</owners>
@@ -20,9 +20,8 @@
       Wiki : https://github.com/undergroundwires/safeOrbit/wiki
     </description>
     <releaseNotes>
-      - [.NET CORE] Bug fix :  Not being able to read IL-bytes
-      - Minor bug fixes
-      - Xml documentation are included in nuget package.
+      - [Security] Fixed MemoryProtector: MemoryProtector now uses different strategies to protect data depending
+	  on the platform.
     </releaseNotes>
     <copyright>Copyright 2016</copyright>
     <tags>.net security protect safeorbit hash safestring saferandom safebytes protection injection detection asynchronous encryption</tags>
