memoryprotector tests are linked in netframework tests

--- a/src/tests/UnitTests.NetFramework/UnitTests.NetFramework.csproj
+++ b/src/tests/UnitTests.NetFramework/UnitTests.NetFramework.csproj
@@ -74,6 +74,9 @@
     <Compile Include="..\UnitTests\Internal\Stubs.cs">
       <Link>Internal\Stubs.cs</Link>
     </Compile>
+    <Compile Include="..\UnitTests\Memory\SafeBytes\SafeByte\DataProtection\MemoryProtectorTests.cs">
+      <Link>Memory\SafeBytes\SafeByte\DataProtection\MemoryProtectorTests.cs</Link>
+    </Compile>
     <Compile Include="..\UnitTests\Memory\SafeMemoryStreamTests.cs">
       <Link>Memory\SafeMemoryStreamTests.cs</Link>
     </Compile>
