--- a/src/tests/IntegrationTests.NetFramework/IntegrationTests.NetFramework.csproj
+++ b/src/tests/IntegrationTests.NetFramework/IntegrationTests.NetFramework.csproj
@@ -55,8 +55,8 @@
     <Compile Include="..\IntegrationTests\Cryptography\Encryption\AesEncryptorTests.cs">
       <Link>Cryptography\Encryption\AesEncryptorTests.cs</Link>
     </Compile>
-    <Compile Include="..\IntegrationTests\Cryptography\Encryption\BlowfishTests.cs">
-      <Link>Cryptography\Encryption\BlowfishTests.cs</Link>
+    <Compile Include="..\IntegrationTests\Cryptography\Encryption\BlowfishEncryptorTests.cs">
+      <Link>Cryptography\Encryption\BlowfishEncryptorTests.cs</Link>
     </Compile>
     <Compile Include="..\IntegrationTests\Infrastructure\Text\EncodingVectors.cs">
       <Link>Infrastructure\Text\EncodingVectors.cs</Link>
